feat: api docs for post and get record
